--- a/PIJEE-ejb/pom.xml
+++ b/PIJEE-ejb/pom.xml
@@ -28,6 +28,11 @@
     <version>3.8.1</version>
     <scope>test</scope>
 </dependency>
+<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
